Fixes the custom checkbox not aligning correctly with its text
- this was brought by the new bootstrap updates

--- a/scss/_rc-custom-adjustments.scss
+++ b/scss/_rc-custom-adjustments.scss
@@ -170,6 +170,9 @@ label, .col-form-label, legend {
   font-weight: $font-weight-bold;
 }
 
+.custom-control-indicator {
+  top: .25rem;
+}
 
 
 // Navigation
